--- a/TicTacToe/app/src/main/res/values/strings.xml
+++ b/TicTacToe/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TicTacToe</string>
+    <string name="title_activity_setting">Setting</string>
+    <string name="main">Main</string>
+    <string name="type_image">image/*</string>
+    <string name="image_name">pickImageResult.jpeg</string>
+    <string name="select_source">Select source</string>
 </resources>
